# swagger/swagger.yml
@@ -58,7 +58,7 @@ paths:
           201:
             description: Created
             schema:
-              $ref: "#/definitions/message"
+              $ref: "#/definitions/resp"
   /sync:
     post:
       produces:
@@ -79,20 +79,59 @@ paths:
           201:
             description: Created
             schema:
-              $ref: "#/definitions/message"
+              description: OK
 definitions:
+  resp:
+    type: object
+    properties:
+      message_queued:
+        type: boolean
   message:
     type: object
-    required:
-      - body
+
     properties:
       id:
         type: integer
         format: int64
-        readOnly: true
-      body:
+      idd: 
         type: string
-        minLength: 1
+      event_time:
+        type: string
+      event_date:
+        type: string
+      status:
+        type: string
+      host_name:
+        type: string
+      event_id:
+        type: integer
+        format: int64
+      severity:
+        type: string
+      actions:
+        type: array
+        items:
+          type: string
+      channels:
+        type: array 
+        items:
+          type: object
+          properties:
+            chat:
+              type: string
+            channel:
+                type: string
+            token:
+              type: object
+              properties:
+                phone1:
+                  type: string
+                phone2:
+                  type: string
+            language: 
+              type: string
+      tool: 
+        type: string
       processed:
         type: boolean
   error:
